--- a/index.html
+++ b/index.html
@@ -327,23 +327,48 @@
     </div>
   </div>
 </section>
-
 <!-- WORK -->
 <section id="work">
-  <div class="container">
-    <div class="row" style="align-items:end; justify-content:space-between; margin-bottom:12px">
-      <h2 style="margin:0">Selected Work</h2>
-      <a class="muted" href="#contact" style="font-weight:800; text-decoration:none">Need something similar?</a>
+    <div class="container">
+        <div class="row" style="align-items:end; justify-content:space-between; margin-bottom:12px">
+            <h2 style="margin:0">Selected Work</h2>
+            <a class="muted" href="#contact" style="font-weight:800; text-decoration:none">Need something similar?</a>
+        </div>
+
+        <div class="work-grid">
+
+            <div class="card pad reveal">
+                <img src="carousel-series.png" alt="Carousel Series" style="width:100%; border-radius:8px;">
+                <div class="work-title">Carousel Series</div>
+            </div>
+
+            <div class="card pad reveal">
+                <img src="blob:https://web.whatsapp.com/f210ffa9-d199-48b9-ad84-8f5bd76ea3dd" alt="Festival Banner Set" style="width:100%; border-radius:8px;">
+                <div class="work-title">Festival Banner Set</div>
+            </div>
+
+            <div class="card pad reveal">
+                <img src="reel-credits.png" alt="Reel Credits Pack" style="width:100%; border-radius:8px;">
+                <div class="work-title">Reel Credits Pack</div>
+            </div>
+
+            <div class="card pad reveal">
+                <img src="youtube-thumbnails.png" alt="YouTube Thumbnails" style="width:100%; border-radius:8px;">
+                <div class="work-title">YouTube Thumbnails</div>
+            </div>
+
+            <div class="card pad reveal">
+                <img src="brand-grid.png" alt="Brand Grid Refresh" style="width:100%; border-radius:8px;">
+                <div class="work-title">Brand Grid Refresh</div>
+            </div>
+
+            <div class="card pad reveal">
+                <img src="meta-ad.png" alt="Meta Ad Creatives" style="width:100%; border-radius:8px;">
+                <div class="work-title">Meta Ad Creatives</div>
+            </div>
+
+        </div>
     </div>
-    <div class="work-grid">
-      <div class="card pad reveal"><div class="work-tile">Carousel Series</div></div>
-      <div class="card pad reveal"><div class="work-tile">Festival Banner Set</div></div>
-      <div class="card pad reveal"><div class="work-tile">Reel Edits Pack</div></div>
-      <div class="card pad reveal"><div class="work-tile">YouTube Thumbnails</div></div>
-      <div class="card pad reveal"><div class="work-tile">Brand Grid Refresh</div></div>
-      <div class="card pad reveal"><div class="work-tile">Meta Ad Creatives</div></div>
-    </div>
-  </div>
 </section>
 
 <!-- PROCESS -->
@@ -582,3 +607,4 @@ ${data.get('message')}`
 </script>
 </body>
 </html>
+
