--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Digital Pranav — Social Media Management, Banners & Reels</title>
+  <title><Mitro Brand — Social Media Management, Banners & Reels</title>
   <meta name="description" content="Digital Pranav — End-to-end social media management, banner design, and high-retention reels." />
   <style>
     :root{
@@ -607,4 +607,5 @@ ${data.get('message')}`
 </script>
 </body>
 </html>
+
 
