--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title><Mitro Brand — Social Media Management, Banners & Reels</title>
-  <meta name="description" content="Digital Pranav — End-to-end social media management, banner design, and high-retention reels." />
+  <meta name="description" content="Mitro Brand — End-to-end social media management, banner design, and high-retention reels." />
   <style>
     :root{
       --bg: #f7f7fb;
@@ -555,7 +555,7 @@
 <!-- FOOTER -->
 <footer>
   <div class="container" style="padding:22px 0; display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:space-between">
-    <div>© <span id="year"></span> Digital Pranav. All rights reserved.</div>
+    <div>© <span id="year"></span>Mitro Brand. All rights reserved.</div>
     <div class="row">
       <a href="#" style="text-decoration:none">Privacy</a>
       <a href="#" style="text-decoration:none">Terms</a>
@@ -607,5 +607,6 @@ ${data.get('message')}`
 </script>
 </body>
 </html>
+
 
 
