--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="work-grid">
 
             <div class="card pad reveal">
-                <img src="carousel-series.png" alt="Carousel Series" style="width:100%; border-radius:8px;">
+                <img src="https://img.freepik.com/free-vector/happy-janmashtami-festival-illustration-dahi-handi-celebration-background_1035-24365.jpg?w=360" alt="Carousel Series" style="width:100%; border-radius:8px;">
                 <div class="work-title">Carousel Series</div>
             </div>
 
@@ -607,6 +607,7 @@ ${data.get('message')}`
 </script>
 </body>
 </html>
+
 
 
 
