--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title><Mitro Brand — Social Media Management, Banners & Reels</title>
-  <meta name="description" content="Mitro Brand — End-to-end social media management, banner design, and high-retention reels." />
+  <meta name="description" content="Mitro Brand — End-to-end social media experts , banner design, and high-retention reels." />
   <style>
     :root{
       --bg: #f7f7fb;
@@ -607,6 +607,7 @@ ${data.get('message')}`
 </script>
 </body>
 </html>
+
 
 
 
