--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title><Mitro Brand — Social Media Management, Banners & Reels</title>
+  <title><Mitro Brand></title>
   <meta name="description" content="Mitro Brand — End-to-end social media experts , banner design, and high-retention reels." />
   <style>
     :root{
@@ -607,6 +607,7 @@ ${data.get('message')}`
 </script>
 </body>
 </html>
+
 
 
 
